# agentao

./: .env.example  .gitignore  AGENTAO.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh.md  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy-developer-guide.yml  publish-testpypi.yml  publish.yml
agentao/: __init__.py  __main__.py  _env.py  agent.py  cancellation.py  cli.py  context_manager.py  display.py  frontmatter.py  logging_utils.py  media_limits.py  paths.py  permissions.py  permissions_hardline.py  redact.py  session.py  tool_runner.py
agentao/acp/: __init__.py  __main__.py  _handler_utils.py  _transport_helpers.py  _transport_interaction.py  _transport_replay.py  agentao_set_model.py  initialize.py  mcp_translate.py  models.py  protocol.py  schema.py  schema_export.py  server.py  session_cancel.py  session_list_models.py  session_load.py  session_manager.py  session_new.py  session_prompt.py  session_set_config_option.py  session_set_mode.py  session_set_model.py  transport.py
agentao/acp_client/: __init__.py  client.py  config.py  errors.py  inbox.py  interaction.py  manager.py  models.py  process.py  render.py  router.py
agentao/agents/: __init__.py  bg_store.py  manager.py  store.py  tools.py
agentao/capabilities/: __init__.py  filesystem.py  mcp.py  memory.py  process.py  shell.py
agentao/cli/: __init__.py  __main__.py  _globals.py  _utils.py  acp_inbox.py  app.py  commands.py  commands_ext.py  diagnostics_cli.py  display.py  duration.py  entrypoints.py  goal_state.py  help_text.py  input_loop.py  replay_commands.py  replay_render.py  run.py  run_models.py  run_template.py  session.py  subcommands.py  transport.py  ui.py
agentao/embedding/: __init__.py  compat.py  factory.py  permission_loader.py  sessions.py
agentao/harness/: __init__.py  events.py  models.py  projection.py  protocols.py  replay_projection.py  schema.py
agentao/host/: __init__.py  events.py  models.py  projection.py  protocols.py  replay_projection.py  schema.py
agentao/llm/: _logging.py  _retry.py  _stream_response.py  client.py
agentao/mcp/: __init__.py  client.py  config.py  registry.py  tool.py
agentao/memory/: __init__.py  crystallizer.py  guards.py  manager.py  models.py  render.py  retriever.py  storage.py
agentao/permissions_hardline/: __init__.py  _contexts.py  _decode.py  _heredoc.py  _patterns.py  _scanner.py
agentao/plan/: __init__.py  controller.py  (+2 more)
chatagent/: agent.py  cli.py  context_manager.py
developer-guide/: README.md  index.md  package-lock.json  package.json
docs/: ACP.md  CONFIGURATION.md  CONFIGURATION.zh.md  EMBEDDING.md  EMBED_FOR_AGENTS.md  HEADLESS_RUNTIME_ISSUES.md  LOGGING.md  MODEL_SWITCHING.md  QUICKSTART.md  README.md  README.zh.md  SKILLS_GUIDE.md  kanban-acp-embedded-client-issue.md
examples/: README.md  README.zh.md  harness_audit_pipeline.py  harness_events.py  headless_worker.py  host_audit_pipeline.py  host_events.py
examples/batch-scheduler/: .env.example  README.md  pyproject.toml
examples/batch-scheduler/.agentao/skills/daily-digest/: SKILL.md
examples/batch-scheduler/k8s/: cronjob.yaml
examples/batch-scheduler/src/: daily_digest.py
examples/data-workbench/: .env.example  README.md  pyproject.toml
examples/data-workbench/.agentao/skills/duckdb-analyst/: SKILL.md
examples/data-workbench/.agentao/skills/matplotlib-charts/: SKILL.md
examples/data-workbench/src/: workbench.py
examples/fastapi-background/: README.md  pyproject.toml
examples/fastapi-background/app/: main.py
examples/fastapi-background/tests/: test_smoke.py
examples/jupyter-session/: README.md  pyproject.toml  session.ipynb
examples/jupyter-session/src/: kernel_session.py
examples/jupyter-session/tests/: test_smoke.py
examples/protocol-injection/: .gitignore  README.md  pyproject.toml
examples/protocol-injection/src/: protocol_demo.py
examples/protocol-injection/tests/: conftest.py  test_smoke.py
examples/pytest-fixture/: README.md  pyproject.toml
examples/pytest-fixture/src/: agentao_fixtures.py
examples/pytest-fixture/tests/: conftest.py  test_smoke.py
examples/saas-assistant/: .env.example  README.md  pyproject.toml
examples/saas-assistant/app/: auth.py  main.py  tools.py
examples/saas-assistant/tests/: smoke.py
examples/slack-bot/: README.md  pyproject.toml
examples/slack-bot/src/: bot.py
examples/slack-bot/tests/: test_smoke.py
examples/ticket-automation/: .env.example  README.md  pyproject.toml
examples/ticket-automation/.agentao/skills/support-triage/: SKILL.md
examples/ticket-automation/src/: triage.py
examples/tool-injection/: README.md  pyproject.toml
examples/tool-injection/src/: jina_tools.py
examples/tool-injection/tests/: conftest.py  test_smoke.py
examples/wechat-bot/: .gitignore  README.md  pyproject.toml
examples/wechat-bot/src/: bot.py
examples/wechat-bot/tests/: test_smoke.py
schemas/: replay-event-1.0.json  replay-event-1.1.json  replay-event-1.2.json
scripts/: write_harness_schema.py  write_host_schema.py  write_replay_schema.py
tests/: README.md  conftest.py  test_acp_ask_user.py  test_acp_cli_entrypoint.py  test_acp_client_cli.py  test_acp_client_config.py  test_acp_client_embedding.py  test_acp_client_inbox.py  test_acp_client_jsonrpc.py  test_acp_client_process.py  test_acp_client_prompt.py  test_acp_initialize.py  test_acp_mcp_injection.py  test_acp_multi_session.py  test_acp_protocol.py  test_acp_request_permission.py  test_acp_resume_on_startup.py  test_acp_schema.py  test_acp_session_cancel.py  test_acp_session_load.py  test_acp_session_manager.py  test_acp_session_new.py  test_acp_session_prompt.py  test_acp_session_set_model.py  test_acp_set_config_option.py  test_acp_stop_reason.py  test_acp_transport.py  test_active_permissions.py  test_agent_status_render.py  test_agent_subsystems_optional.py  test_agentao_md.py  test_agentao_md_frontmatter.py  test_agents_manager.py  test_arun_events_cancel.py  test_ask_user_structured.py  test_async_chat.py  test_async_tool.py  test_bg_task_store.py  test_capabilities_process.py  test_chat_images.py  (+166 more)
(+655 files in other folders)
