[project]
name = "agentao"
version = "0.2.3"
description = "An Eastern-philosophy-inspired CLI agent harness for personal research and data analysis assistance."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "pygments>=2.16.0",
    "readchar>=4.2.1",
    "prompt-toolkit>=3.0.52",
    "pymupdf>=1.27.1",
    "pdfplumber>=0.11.9",
    "pycryptodome>=3.23.0",
    "pandas>=3.0.1",
    "openpyxl>=3.1.5",
    "pyyaml>=6.0.3",
    "mcp>=1.26.0",
    "google-genai>=1.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
crawl4ai = ["crawl4ai>=0.8.0"]
tokenizer = ["tiktoken>=0.7.0"]

[project.scripts]
agentao = "agentao.cli:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
