[project]
name = "agentao"
dynamic = ["version"]
description = "An Eastern-philosophy-inspired CLI agent harness for personal research and data analysis assistance."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Bo Jin"}]
keywords = ["agent", "cli", "llm", "openai", "mcp", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "pygments>=2.16.0",
    "readchar>=4.2.1",
    "prompt-toolkit>=3.0.52",
    "pyyaml>=6.0.3",
    "mcp>=1.26.0",
]

[project.optional-dependencies]
pdf      = ["pymupdf>=1.27.1", "pdfplumber>=0.11.9"]
excel    = ["pandas>=2.0", "openpyxl>=3.1.5"]
image    = ["Pillow>=10.0.0"]
crypto   = ["pycryptodome>=3.23.0"]
google   = ["google-genai>=1.0.0"]
crawl4ai = ["crawl4ai>=0.8.0"]
tokenizer = ["tiktoken>=0.7.0"]
full     = ["agentao[pdf,excel,image,crypto,google,crawl4ai,tokenizer]"]

[project.urls]
Homepage = "https://github.com/jin-bo/agentao"
Repository = "https://github.com/jin-bo/agentao"
"Bug Tracker" = "https://github.com/jin-bo/agentao/issues"

[project.scripts]
agentao = "agentao.cli:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "agentao/__init__.py"

[tool.hatch.build.targets.wheel]
exclude = [
    "workspace", "docs", "agentao.log", "main.py", "run.sh", "AGENTAO.md",
]
force-include = {"skills/skill-creator" = "skills/skill-creator"}

[tool.hatch.build.targets.sdist]
exclude = [
    "workspace", "docs", "agentao.log", "run.sh", "AGENTAO.md",
    "main.py", ".claude",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
