[project]
name = "agentao"
dynamic = ["version"]
description = "A governed agent runtime for local-first, private-first, embeddable AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Bo Jin"}]
keywords = ["agent", "cli", "llm", "openai", "mcp", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "pygments>=2.16.0",
    "readchar>=4.2.1",
    "prompt-toolkit>=3.0.52",
    "pyyaml>=6.0.3",
    "mcp>=1.26.0",
    "filelock>=1.4.0",
    "jieba>=0.42.1",
    "pydantic>=2",
]

[project.optional-dependencies]
pdf      = ["pymupdf>=1.27.1", "pdfplumber>=0.11.9"]
excel    = ["pandas>=2.0", "openpyxl>=3.1.5"]
image    = ["Pillow>=10.0.0"]
crypto   = ["pycryptodome>=3.23.0"]
google   = ["google-genai>=1.0.0"]
crawl4ai = ["crawl4ai>=0.8.0"]
tokenizer = ["tiktoken>=0.7.0"]
full     = ["agentao[pdf,excel,image,crypto,google,crawl4ai,tokenizer]"]

[project.urls]
Homepage = "https://github.com/jin-bo/agentao"
Repository = "https://github.com/jin-bo/agentao"
"Bug Tracker" = "https://github.com/jin-bo/agentao/issues"

[project.scripts]
agentao = "agentao.cli:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "agentao/__init__.py"

[tool.hatch.build.targets.wheel]
exclude = [
    "workspace", "docs", "developer-guide", "examples", "agentao.log", "main.py", "run.sh", "AGENTAO.md", ".agentao",
]
force-include = {"skills/skill-creator" = "skills/skill-creator", "agentao/py.typed" = "agentao/py.typed"}

[tool.hatch.build.targets.sdist]
exclude = [
    ".agentao",
    ".claude",
    ".github",
    ".pytest_cache",
    ".venv",
    "agentao.log",
    "developer-guide",
    "dist",
    "docs",
    "examples",
    "main.py",
    "run.sh",
    "tests",
    "workspace",
    "AGENTAO.md",
    "CLAUDE.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -m 'not slow'"
markers = [
    "slow: tests that build / install / boot subprocess venvs (P0.7 clean-install smoke)",
]

[dependency-groups]
dev = [
    "build>=1.2.2",
    "pytest>=9.0.2",
    "twine>=6.1.0",
    "mypy>=1.13.0",
]

[tool.mypy]
# P0.4 typing gate — strict only on the public harness boundary; the rest of
# the codebase is untouched until separate items raise its bar.
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["agentao.harness.*"]
strict = true
warn_unused_ignores = true
disallow_any_explicit = false

