[project]
name = "agentao-example-batch-scheduler"
version = "0.1.0"
description = "Blueprint E — nightly scheduled agent producing a structured daily digest."
requires-python = ">=3.10"
dependencies = [
    "agentao",
]

[tool.uv.sources]
agentao = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
