[project]
name = "agentao-example-data-workbench"
version = "0.1.0"
description = "Blueprint D — DuckDB + matplotlib analyst workbench driven by skills."
requires-python = ">=3.10"
dependencies = [
    "agentao",
    "duckdb>=0.10",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "pyarrow>=15",
]

[tool.uv.sources]
agentao = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
