[project]
name = "agentao-example-fastapi-background"
version = "0.1.0"
description = "Minimal FastAPI route that runs an Agentao turn in a background task."
requires-python = ">=3.10"
dependencies = [
    "agentao",
    "fastapi>=0.115",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
agentao = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
