[project]
name = "agentao-example-jupyter-session"
version = "0.1.0"
description = "One Agentao for the kernel lifetime; events() drives a notebook display."
requires-python = ">=3.10"
dependencies = [
    "agentao",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "ipywidgets>=8.0",
]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
agentao = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
