[project]
name = "agentao-example-protocol-injection"
version = "0.1.0"
description = "Inject all four agentao.host.protocols (FileSystem / ShellExecutor / MCPRegistry / MemoryStore) into an embedded Agentao."
requires-python = ">=3.10"
dependencies = [
    "agentao",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
agentao = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
