[project]
name = "agentao-example-pytest-fixture"
version = "0.1.0"
description = "Drop-in pytest fixture: one Agentao per test, fake LLM, no API key."
requires-python = ">=3.10"
dependencies = [
    "agentao",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
agentao = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
