[project]
name = "agentao-example-saas-assistant"
version = "0.1.0"
description = "Blueprint A — FastAPI + SSE embed of Agentao with per-tenant session pool."
requires-python = ">=3.10"
dependencies = [
    "agentao",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[tool.uv.sources]
agentao = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
