[project]
name = "agentao-example-slack-bot"
version = "0.1.0"
description = "slack-bolt app: each app_mention runs one Agentao turn, channel-scoped permissions."
requires-python = ">=3.10"
dependencies = [
    "agentao",
    "slack-bolt>=1.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
agentao = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
