[project]
name = "agentao-example-ticket-automation"
version = "0.1.0"
description = "Blueprint C — support-ticket triage with confidence-gated auto-reply."
requires-python = ">=3.10"
dependencies = [
    "agentao",
]

[tool.uv.sources]
agentao = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
