[project]
name = "agentao-example-tool-injection"
version = "0.1.0"
description = "Inject Jina-backed web_fetch (construction-time) and web_search (runtime) into an embedded Agentao."
requires-python = ">=3.10"
dependencies = [
    "agentao",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
agentao = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
