[project]
name = "agentao-example-wechat-bot"
version = "0.1.0"
description = "WeChat polling daemon: each inbound message runs one Agentao turn, contact-scoped permissions."
requires-python = ">=3.10"
dependencies = [
    "agentao",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv.sources]
agentao = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
